--- a/graphene nanoribbon.ipynb
+++ b/graphene nanoribbon.ipynb
@@ -29,6 +29,12 @@
     }
    ],
    "source": [
+    "### See graphene quantum dot file for more documentation\n",
+    "# Basically the same notebook, just using a nanoribbon instead and realistic units\n",
+    "# likely will not run without modified version of kwant\n",
+    "\n",
+    "\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import kwant\n",
