--- a/magnetic data.ipynb
+++ b/magnetic data.ipynb
@@ -8,6 +8,9 @@
    },
    "outputs": [],
    "source": [
+    "### Notebook to analyze effect of magnetic field on energy levels, needs to be rewritten likely###\n",
+    "\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import animation\n",
